Fix broken elements table alignment "Content" region vs others

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -241,10 +241,12 @@
   thead h3 {
     font-size: 140%;
   }
-  thead .regionProperties > * {
-    // Expand cell content to make space for embedded popover (no initial size)
-    width: 22em;
-    min-width: 22em;
+  thead .regionProperties {
+    .static-popover-wrap {
+      width: 22em;
+      min-width: 22em;
+      margin-left: auto;
+    }
   }
 
   tbody {
